k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rednorte
  namespace: rednorte
  annotations:
    nginx.ingress.kubernetes.io/websocket-services: ms-notifications
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: rednorte.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: krakend
                port:
                  number: 8080
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: ms-notifications
                port:
                  number: 3002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
